# sailingmyboat

./: db.sqlite3  pyproject.toml  requirements.txt
admin/: forms.py  helper.py  urls.py  views.py
admin/templates/admin/: base.html  booking.html  feedback.html  nav.html
admin/templates/admin/employees/: add.html  edit.html  list.html
admin/templates/admin/events/: bookings_list.html  event_edit.html  event_list.html
admin/templates/admin/trainings/: bookings_list.html  training_add.html  training_list.html
admin/templates/admin/yachts/: yacht_list.html  yacht_type_edit.html  (+1 more)
core/: settings.py  urls.py
main/: forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_eventbooking_end_date_and_more.py  0003_alter_trainingbooking_end_date_and_more.py  0004_booking_remove_yachtbooking_member_and_more.py  0005_package_persons.py  0006_payment.py  0007_booking_status.py  0008_alter_feedback_email_alter_feedback_mobile_number.py  0009_rename_first_name_feedback_name_and_more.py
main/templates/: base.html  booking.html  create_account.html  feedback.html  index.html  login.html  nav.html  success.html  yacht_detail.html
main/templates/events/: detail.html  index.html
main/templates/forms/: template.html
main/templates/trainings/: detail.html  index.html  register.html
pdfs/: urls.py  views.py
pdfs/templates/bookings/: list.html
pdfs/templates/pdfs/: base.html  employees.html  events.html  events_booking.html  feedbacks.html  packages.html  training_booking.html  trainings.html  yacht_type.html  yachts.html
(+2 files in other folders)
