[tool.poetry]
name = "sailingmyboat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
Pillow = "^8.4.0"
razorpay = "^1.2.0"

[tool.poetry.dev-dependencies]
flake8-black = "^0.2.3"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
